css: fix giphy images taking too much space

--- a/custom.css
+++ b/custom.css
@@ -358,3 +358,15 @@ img {
 .BrQiad {
     max-width: 100%;
 }
+
+.aPoydb, .FZiAuc {
+    width: auto;
+}
+img.kOkzDb {
+    height: 200px;
+    width: auto!important;
+}
+.YKG9Vc {
+    max-height: 200px;
+    width: auto;
+}
